--- a/src/components/BurgerButton/BurgerButton.module.scss
+++ b/src/components/BurgerButton/BurgerButton.module.scss
@@ -1,22 +1,51 @@
 @import "src/scss/main";
 
 .burger {
-  background: $soft-light2;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  cursor: pointer;
   display: flex;
+  cursor: pointer;
+  width: 40px;
+  height: 44px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 5px;
+  background: $soft-light2;
+  border-radius: 50%;
+  padding: 5px;
+  transition: background 0.25s linear;
 
-  &:after {
-    content: '';
-    display: block;
-    width: 20px;
-    height: 20px;
-    background-image: url('../../../src/images/icons/burger.svg');
-    background-size: cover;
+  @media (hover: hover) {
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+
+  div {
+    width: 22px;
+    height: 1px;
+    background: black;
+    border-radius: 3px;
+    transition: all 0.25s linear;
+
+  }
+}
+
+.open {
+  background: $background-green;
+
+  div:nth-child(1) {
+    transform: translateY(6px) rotate(-45deg);
+    background: $soft-light;
+  }
+
+  div:nth-child(2) {
+    opacity: 0;
+    background: $soft-light;
+  }
+
+  div:nth-child(3) {
+    transform: translateY(-6px) rotate(45deg);
+    background: $soft-light;
   }
 }
 
@@ -24,10 +53,20 @@
   .burger {
     width: 32px;
     height: 32px;
+    gap: 4px;
 
-    &:after {
+    div {
       width: 16px;
-      height: 16px;
+    }
+
+  }
+
+  .open {
+    div:nth-child(1) {
+      transform: translateY(5px) rotate(-45deg);
+    }
+    div:nth-child(3) {
+      transform: translateY(-5px) rotate(45deg);
     }
   }
 }
