--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -46,6 +46,37 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.25s ease-in-out, visibility 1s;
+
+  ul {
+
+    li {
+      @media (hover: hover) {
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+    }
+
+    li:first-child {
+      width: 110px;
+      height: 1px;
+      background: $soft-light;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    li:last-child {
+      width: 110px;
+      height: 1px;
+      background: $soft-light;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 .menu.open {
@@ -60,4 +91,26 @@
 
 .menu-item.open {
   opacity: 1;
+}
+
+@media screen and (max-width: 743px) {
+  .menu {
+    top: 72px;
+  }
+}
+
+@media screen and (max-width: 439px) {
+  .menu {
+    top: 64px;
+
+    ul {
+      li:first-child {
+        width: 80px;
+      }
+
+      li:last-child {
+        width: 80px;
+      }
+    }
+  }
 }
