--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,4 +4,5 @@ $green: #415C52;
 $base-white: #FCFCF4;
 $soft-light: #DFE2D9;
 $soft-light2: rgba(150, 152, 136, 0.06);
+$base-background: rgba(223, 226, 217, 1);
 $background-green: rgba(46, 120, 92, 0.40);
