Refactor image paths and add new features to sliders
The commit updates paths for images to follow the new project structure. Also, significant revisions were made to several sliders in the application, including responsiveness measures based on the viewport size, new navigation features, and UI adjustments to provide an improved appearance. To facilitate these changes, new files were added and some existing ones updated.

--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -8,7 +8,7 @@
 .instagram {
   position: relative;
   display: block;
-  background-image: url("../../../images/icons/instagram-icon.svg");
+  background-image: url("../../../../public/images/icons/instagram-icon.svg");
   background-size: cover;
   width: 20px;
   height: 20px;
@@ -23,7 +23,7 @@
 .whatsApp {
   position: relative;
   display: block;
-  background-image: url("../../../images/icons/whatsapp-icon.svg");
+  background-image: url("../../../../public/images/icons/whatsapp-icon.svg");
   background-size: cover;
   width: 20px;
   height: 20px;
