--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -7,7 +7,7 @@
 
   &:after {
     content: '';
-    background-image: url("../../../images/footer/line.svg");
+    background-image: url("../../../../public/images/footer/line.svg");
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
