готова первая версия сайта

--- a/src/app/components/SectionPortfolio/SectionPortfolio.module.scss
+++ b/src/app/components/SectionPortfolio/SectionPortfolio.module.scss
@@ -14,7 +14,7 @@
 
   &:after {
     content: '';
-    background-image: url("../../../../public/images/footer/line2.png");
+    background-image: url("../../../images/footer/line2.png");
     background-position: -150px -200px;
     width: 100%;
     height: 100%;
