--- a/src/app/components/Modals/TeamCard/TeamCard.module.scss
+++ b/src/app/components/Modals/TeamCard/TeamCard.module.scss
@@ -22,7 +22,7 @@
     right: 40px;
     width: 32px;
     height: 32px;
-    background-image: url('../../../../../public/images/icons/modal-cross.svg');
+    background-image: url('../../../../images/icons/modal-cross.svg');
     background-position: center;
     background-size: cover;
     cursor: pointer;
