--- a/src/app/components/SectionMasters/SectionMasters.module.scss
+++ b/src/app/components/SectionMasters/SectionMasters.module.scss
@@ -21,7 +21,7 @@
 }
 
 .nextButton {
-  background-image: url('../../../../public/images/icons/arrow.svg');
+  background-image: url('../../../images/icons/arrow.svg');
   background-repeat: no-repeat;
   background-position: center;
   width: 41px;
@@ -29,7 +29,7 @@
 }
 
 .prevButton {
-  background-image: url('../../../../public/images/icons/arrow.svg');
+  background-image: url('../../../images/icons/arrow.svg');
   background-repeat: no-repeat;
   background-position: center;
   width: 41px;
